--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -22,22 +22,19 @@
 
 
         <!-- Page Header Start -->
-        <div class="container-fluid page-header my-5 mt-0 wow fadeIn" id="admin-header" data-wow-delay="0.1s">
+        <div class="container-fluid page-header my-5 mt-0" id="admin-header">
             <div class="container text-center">
-                <h1 class="display-4 text-white animated slideInDown mb-4"><span sec:authentication="name"></span></h1>
+                <h1 class="display-4 text-white mb-4" sec:authentication="name"></h1>
             </div>
         </div>
         <!-- Page Header End -->
 
         <div id="content-wrap">
-            <!-- Services Start -->
             <div class="container">
-                <!-- Form Start -->
                 <div class="row justify-content-center mb-5">
+                    <div class="col-lg-8 mb-0">
 
-                    <div class="col-lg-8 mb-0 wow fadeInUp" data-wow-delay="0.1s">
-
-                        <div class="text-left wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                        <div class="text-left" style="max-width: 500px;">
                             <h6 class="text-primary text-uppercase">Contact Enquiries</h6>
                             <p class="mb-4">View and delete enquiries</p>
                         </div>
