--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -331,7 +331,7 @@
                         <div class="col-lg-8 mb-0 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="bg-primary text-center p-5">
                                 <h1 class="mb-4">Contact Us Now</h1>
-                                <form class="needs-validation" id="contact-form" action="#" th:action="@{/form}" th:object="${contact}" method=post>
+                                <form class="needs-validation" id="contact-form" th:action="@{/form}" th:object="${contact}" method=post>
                                     <div class="row g-3">
                                         <div class="col-sm-6">
                                             <div class="form-floating">
