--- a/src/main/resources/templates/shared/head.html
+++ b/src/main/resources/templates/shared/head.html
@@ -16,5 +16,5 @@
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link th:href="@{/css/style2.css}" rel="stylesheet">
 </head>
