--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,7 +61,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+<!--                                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
                                     <button class="btn btn-dark w-100 py-3" type="submit" id="submit-button" role="button">Submit</button>
                                 </div>
                             </div>
